k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devconnector-server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: devconnector-server
  template:
    metadata:
      labels:
        component: devconnector-server
    spec:
      containers:
        - name: devconnector-server
          image: alexvak/devconnector-server
          ports:
            - containerPort: 5000
          resources:
            limits:
              memory: 256Mi
              cpu: 100m
