k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devconnector-client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: devconnector-client
  ports:
    - port: 3000
      targetPort: 3000
