k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: "devcon-letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - devcon.alexvak.com
        - www.devcon.alexvak.com
      secretName: devcon-alexvak-com
  rules:
    - host: devcon.alexvak.com
      http:
        paths:
          - path: /
            backend:
              serviceName: devconnector-client-cluster-ip-service
              servicePort: 3000
          - path: /api/
            backend:
              serviceName: devconnector-server-cluster-ip-service
              servicePort: 5000
    - host: www.devcon.alexvak.com
      http:
        paths:
          - path: /
            backend:
              serviceName: devconnector-client-cluster-ip-service
              servicePort: 3000
          - path: /api/
            backend:
              serviceName: devconnector-server-cluster-ip-service
              servicePort: 5000
